# tpm2-ssh-agent

./: Makefile  README.md  agent.h  buffer.c  keys.c  list.c  log.c  main.c  meson.build  message.c  sign.c  socket.c
debian/: README  README.Debian  README.source  changelog  control  copyright  debhelper-build-stamp  files  manpage.1.ex  manpage.md.ex  manpage.sgml.ex  manpage.xml.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  tpm2-ssh-agent.cron.d.ex  tpm2-ssh-agent.default  tpm2-ssh-agent.doc-base.ex  tpm2-ssh-agent.postrm.debhelper  tpm2-ssh-agent.service  tpm2-ssh-agent.socket  tpm2-ssh-agent.substvars
openrc/: confd  initd
systemd/: tpm2-ssh-agent.service  tpm2-ssh-agent.socket
